Fix reset input width on Firefox
<input> has a default `min-width:auto`, which can wreck flex layout on
Firefox

--- a/src/sass/helpers.scss
+++ b/src/sass/helpers.scss
@@ -56,6 +56,7 @@
 }
 
 @mixin reset-button {
+  min-width: 0;
   width: auto;
   margin: 0;
   padding: 0;
